# SpaceInvadersNEXT

./: .cproject  .project  CMakeCache.txt  CMakeLists.txt  Makefile  SpaceInvaders  cmake_install.cmake  doxygen_config  output.txt  report.tex
Data/: NormalTurret.xml  SpaceShip.xml  SpaceShip2.xml  enemyShip.xml  enemyShip2.xml  enemyShip3.xml  enemyShip4.xml  es1.xml  es2.xml  es3.xml  es4.xml  game1.xml  game2.xml  regularAmmo.xml  shield1.xml  shield2.xml  shield3.xml
documentation/: doxygen.html  report.aux  report.out
documentation/documentation/html/: graph_legend.html  index.html
documentation/documentation/latex/: doxygen.sty  refman.tex
documentation/extra/: report.aux  report.out  report.tex~
documentation/html/: annotated.html  classes.html  files.html  functions.html  functions_0x62.html  functions_0x63.html  functions_0x64.html  functions_0x65.html  functions_0x66.html  functions_0x67.html  functions_0x68.html  functions_0x69.html  functions_0x6c.html  functions_0x6d.html  functions_0x6e.html  functions_0x6f.html  functions_0x70.html  functions_0x72.html  functions_0x73.html  functions_0x74.html  functions_0x75.html  functions_0x76.html  functions_0x77.html  functions_0x7e.html  functions_func.html  functions_func_0x62.html  functions_func_0x63.html  functions_func_0x64.html  functions_func_0x65.html  functions_func_0x67.html  functions_func_0x68.html  functions_func_0x6d.html  functions_func_0x6e.html  functions_func_0x6f.html  functions_func_0x70.html  functions_func_0x72.html  functions_func_0x73.html  functions_func_0x75.html  functions_func_0x77.html  functions_func_0x7e.html  (+27 more)
documentation/html/search/: all_61.js  all_62.js  all_63.js  all_64.js  all_65.js  all_66.js  all_67.js  all_68.js  all_69.js  all_6c.js  all_6d.js  all_6e.js  all_6f.js  all_70.js  all_72.js  all_73.js  all_75.js  all_76.js  all_77.js  all_78.js  all_79.js  all_7e.js  classes_61.js  classes_62.js  classes_63.js  classes_64.js  classes_65.js  classes_67.js  classes_68.js  classes_6d.js  classes_6f.js  classes_73.js  enums_65.js  enumvalues_61.js  (+52 more)
documentation/latex/: annotated.tex  doxygen.sty  files.tex  hierarchy.tex  namespaces.tex  refman.tex
src/: Exception.cpp  Exception.h  Game.cpp  Game.h  GameController.cpp  GameController.h  GameView.cpp  GameView.h  Makefile  SP_INV_NEXT.cpp  cmake_install.cmake
src/factories/: AbstractFactory.cpp  AbstractFactory.h  BulletFactory.cpp  BulletFactory.h  ControllerFactory.cpp  ControllerFactory.h  DataParser.cpp  DataParser.h  EnemyShipFactory.cpp  EnemyShipFactory.h  Factory.cpp  Factory.h  GameParser.cpp  GameParser.h  HUDFactory.cpp  HUDFactory.h  MainFactory.cpp  MainFactory.h  ShieldFactory.cpp  ShieldFactory.h  SpaceShipFactory.cpp  SpaceShipFactory.h  ViewFactory.cpp  ViewFactory.h
src/models/: Alien.cpp  Alien.h  Bullet.cpp  Bullet.h  EnemyShip.cpp  EnemyShip.h  FlyingObject.cpp  FlyingObject.h  HUD.cpp  HUD.h  Model.cpp  Model.h  MovingObject.cpp  MovingObject.h  Shield.cpp  Shield.h  Ship.cpp  Ship.h  SpaceShip.cpp  SpaceShip.h  StaticObject.cpp  StaticObject.h
src/observers/: Observer.cpp  Observer.h
(+586 files in other folders)
